--- a/src/settings/CountrySelector.css
+++ b/src/settings/CountrySelector.css
@@ -6,6 +6,7 @@
 
 .country-item {
     margin: 0 0 4px;
+    position: relative;
 }
 
 .country-item.country-hidden {
